# shader-forge

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
ai/: providers.toml
animation/clips/: debug_idle.anim.toml  debug_walk.anim.toml
animation/graphs/: debug_actor.animgraph.toml
animation/skeletons/: debug_humanoid.skeleton.toml
audio/: buses.toml
audio/events/: player_footstep.audio-event.toml  runtime_boot.audio-event.toml  (+1 more)
docs/: direct-engine-proposal.md
engine/runtime/: CMakeLists.txt
engine/runtime/include/shader_forge/runtime/: animation_system.hpp  audio_system.hpp  data_foundation.hpp  input_system.hpp  physics_system.hpp  runtime_app.hpp  save_system.hpp  tooling_ui.hpp
engine/runtime/src/: animation_system.cpp  audio_system.cpp  data_foundation.cpp  input_system.cpp  main.cpp  physics_system.cpp  runtime_app.cpp  save_system.cpp  tooling_ui.cpp
input/: actions.toml
physics/: layers.toml
plans/: ENGINE-IMPLEMENTATION-PLAN.md
scripts/: install-windows-native-runtime-deps.ps1  serve-engine-shell.mjs  start-dev-clean.ps1  start-dev-clean.sh  test-engine-ai-scaffold.mjs  test-engine-animation-scaffold.mjs  test-engine-asset-pipeline.mjs  test-engine-audio-scaffold.mjs  test-engine-code-trust-scaffold.mjs  test-engine-data-foundation-scaffold.mjs  test-engine-input-scaffold.mjs  test-engine-migration-fixtures.mjs  test-engine-packaging-scaffold.mjs  test-engine-physics-scaffold.mjs  test-engine-profiling-scaffold.mjs  test-engine-runtime-scaffold.mjs  test-engine-save-system-scaffold.mjs  test-engine-scene-authoring.mjs  test-engine-scene-runtime-scaffold.mjs  test-engine-sessiond.mjs  test-engine-shell-smoke.mjs  test-engine-tooling-ui-scaffold.mjs  test-engine-viewer-bridge.mjs  test-ollama-smoke.mjs
(+129 files in other folders)
